tests/parser/should_pass/includes+comments.csp
include "include_2.csp" -- Some include
include "include_3.csp" -- Another include

P = 2

Q = 4


S = P + Q + R
