tests/parser/should_fail/malformed_include_3.csp
include "include_2.csp -- Some include
